tests/errors/tc_expr_array_wrongsize.lx
@module "main"

pub const main -> fn () int {
    let arr: [int; 5] = [1, 2, 3];
    return 0;
}
